# src/routes/api.ts
@@ -22,38 +22,128 @@ router.post(
   "/banners",
   [authMiddleware, aclMiddleware([ROLES.ADMIN])],
   bannerController.create
+  /*
+    #swagger.tags = ['Banner']
+    #swagger.security = [{
+      "bearerAuth": {}
+    }]
+    #swagger.requestBody = {
+      required: true,
+      schema: {
+        $ref: '#/components/schemas/CreateBannerRequest'
+      }
+    }
+  */
 );
-router.get("/banners", bannerController.findAll);
-router.get("/banners/:id", bannerController.findOne);
+router.get(
+  "/banners",
+  bannerController.findAll
+  /*
+    #swagger.tags = ['Banner']
+  */
+);
+router.get(
+  "/banners/:id",
+  bannerController.findOne
+  /*
+    #swagger.tags = ['Banner']
+  */
+);
 router.put(
   "/banners/:id",
   [authMiddleware, aclMiddleware([ROLES.ADMIN])],
   bannerController.update
+  /*
+    #swagger.tags = ['Banner']
+    #swagger.security = [{
+      "bearerAuth": {}
+    }]
+    #swagger.requestBody = {
+      required: true,
+      schema: {
+        $ref: '#/components/schemas/CreateBannerRequest'
+      }
+    }
+  */
 ),
   router.delete(
     "/banners/:id",
     [authMiddleware, aclMiddleware([ROLES.ADMIN])],
     bannerController.remove
+    /*
+      #swagger.tags = ['Banner']
+      #swagger.security = [{
+        "bearerAuth": {}
+      }]
+    */
   );
 
 router.post(
   "/tickets",
   [authMiddleware, aclMiddleware([ROLES.ADMIN])],
   ticketController.create
+  /*
+    #swagger.tags = ['Ticket']
+    #swagger.security = [{
+      "bearerAuth": {}
+    }]
+    #swagger.requestBody = {
+      required: true,
+      schema: {
+        $ref: '#/components/schemas/CreateTicketRequest'
+      }
+    }
+  */
 );
-router.get("/tickets", ticketController.findAll);
-router.get("/tickets/:id", ticketController.findOne);
+router.get(
+  "/tickets",
+  ticketController.findAll
+  /*
+    #swagger.tags = ['Ticket']
+  */
+);
+router.get(
+  "/tickets/:id",
+  ticketController.findOne
+  /*
+    #swagger.tags = ['Ticket']
+  */
+);
 router.put(
   "/tickets/:id",
   [authMiddleware, aclMiddleware([ROLES.ADMIN])],
   ticketController.update
+  /*
+    #swagger.tags = ['Ticket']
+    #swagger.security = [{
+      "bearerAuth": {}
+    }]
+    #swagger.requestBody = {
+      required: true,
+      schema: {
+        $ref: '#/components/schemas/CreateTicketRequest'
+      }
+    }
+  */
 );
 router.delete(
   "/tickets/:id",
   [authMiddleware, aclMiddleware([ROLES.ADMIN])],
   ticketController.remove
+  /*
+    #swagger.tags = ['Ticket']
+    #swagger.security = [{
+      "bearerAuth": {}
+    }]
+  */
 );
-router.get("/tickets/:eventId/event", ticketController.findAllByEvent);
+router.get(
+  "/tickets/:eventId/event",
+  ticketController.findAllByEvent
+  /*
+    #swagger.tags = ['Ticket']
+  */
+);
 
 router.post(
   "/category",
